action 6 : effet focus

--- a/style.css
+++ b/style.css
@@ -6,15 +6,15 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
+.footer-links a{
+    outline: none;
+}
 a,
 button {
     transition: all .3s ease-in-out;
-    outline: none!important;
 }
 
 a:hover {
-    text-decoration: none;
     cursor: pointer;
 }
 
@@ -459,10 +459,6 @@ nav .caret {
 .btn-d:focus {
     color: #FFF;
     background: rgba(0, 0, 0, .3);
-}
-
-button {
-    outline: none!important;
 }
 
 .btn-rd {
