--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+.footer-links{
+    margin-top: 30px;
+}
 .footer-links a{
     outline: none;
 }
