action 8 : augmenter ratio contraste

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: rgba(255, 255, 255, 0.9);
 }
 
 .d-bloc button:hover {
@@ -137,7 +137,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(255, 255, 255, 1.0);
 }
 
 .d-bloc .a-btn:hover,
@@ -753,7 +753,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgb(100, 77, 15,0.8);
     padding: 40px 40px 40px 40px;
 }
 
@@ -779,7 +779,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #EE6C2F;
     color: #FFFFFF!important;
 }
 
