--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+blockquote{
+    margin: 0;
+    padding: 0;
+    border: none;
+}
 .footer-links{
     margin-top: 30px;
 }
