--- a/style.css
+++ b/style.css
@@ -714,12 +714,12 @@ p {
     margin: auto auto auto auto;
 }
 
-h2 {
+strong {
     font-size: 26px;
     line-height: 1.4em;
 }
 
-h3 {
+h2 {
     font-size: 18px;
     text-transform: uppercase;
     font-weight: 700;
