--- a/style.css
+++ b/style.css
@@ -18,9 +18,15 @@ blockquote{
     padding: 0;
     padding-top: 5px;
 }
+.footer-links ul li{
+    margin-bottom: 12px;
+}
 .footer-links a{
-    outline: none;
-    font-size: 20px;
+    padding: 5px;
+}
+.footer-links a p{
+    margin: 0;
+    font-size: 22px;
 }
 a,
 button {
@@ -708,12 +714,31 @@ p {
     font-size: 20px;
     font-weight: 700;
 }
-
-.social {
+.socials {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
     max-width: 400px;
-    margin: auto auto auto auto;
+    margin: auto;
+    padding: 0;
 }
-
+.social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 10px;
+    max-width: 50px;
+    text-decoration: none;
+}
+.social:hover,.social:focus{
+    text-decoration: none;
+}
+.social span{
+    transform: scale(1.2);
+}
 strong {
     font-size: 26px;
     line-height: 1.4em;
