--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ blockquote{
     border: none;
 }
 .footer-links{
-    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 20px;
 }
 .footer-links ul{
     padding: 0;
