--- a/style.css
+++ b/style.css
@@ -19,17 +19,20 @@ blockquote{
 }
 .footer-links ul{
     padding: 0;
-    padding-top: 5px;
+    padding-top: 10px;
 }
 .footer-links ul li{
     margin-bottom: 12px;
 }
+a{
+    font-family: "helvetica";
+    font-weight: 400;
+}
 .footer-links a{
     padding: 5px;
-}
-.footer-links a p{
     margin: 0;
-    font-size: 22px;
+    font-size: 20px;
+    color: white;
 }
 a,
 button {
@@ -670,8 +673,7 @@ h5,
 h6,
 p,
 label,
-.btn,
-a {
+.btn{
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
